[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "fractpy"
author = "Amarjit Singh Gaba"
author-email = "asinghgaba@gmail.com"
requires = [
    "numpy >=1.18.0",
    "sympy >=1.5",
    "matplotlib >=3.1.0",
]
home-page = "https://github.com/asinghgaba/fractpy"
classifiers = [ "License :: OSI Approved :: MIT License", "Operating System :: OS Independent", "Programming Language :: Python :: 3"]
description-file = "README.md"
requires-python = ">=3.6"

[tool.interrogate]
ignore-init-method = true
ignore-init-module = true
ignore-magic = true
ignore-property-decorators = true
fail-under = 100
verbose = 1

[tool.flit.metadata.requires-extra]
doc = ["sphinx", "sphinx-rtd-theme"]